# quant-pricer-cpp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  Makefile  PROGRESS.md  PROJECT.md  README.md  ROADMAP (1).md  TRACKING_POLICY.md  _r_e_a_d_m_e_8md.html  american_8cpp.html  american_8cpp.js  american_8hpp.html  american_8hpp.js  american_8hpp_source.html  annotated.html  annotated_dup.js  asian_8cpp.html  asian_8cpp.js  asian_8hpp.html  asian_8hpp.js  asian_8hpp_source.html  barrier_8hpp.html  barrier_8hpp.js  barrier_8hpp_source.html  black__scholes_8cpp.html  black__scholes_8cpp.js  black__scholes_8hpp.html  black__scholes_8hpp.js  black__scholes_8hpp_source.html  brownian__bridge_8cpp.html  (+332 more)
.agent/execplans/: 2025-12-18_metrics_snapshot_single_source_of_truth.md
.github/workflows/: ci.yml  docs-pages.yml  nightly.yml  pages.yml  release.yml  wheels.yml
.project-os/: .gitignore  config.toml  events.jsonl
artifacts/: american_consistency.csv  greeks_reliability.csv  manifest.json  qmc_vs_prng.csv
artifacts/heston/: README.md  fit_20230601.csv  fit_20240614.csv  params_20230601.json  params_20240614.json  params_series.csv
benchmarks/: bench_mc.cpp  bench_pde.cpp  bench_sanity.cpp
cmake/: quant-pricer-config.cmake.in
configs/: ssvi_temporal_holdout_v1.json
configs/scenario_grids/: synthetic_validation_v1.json
configs/tolerances/: synthetic_validation_v1.json
data/: README.md  options_2023-06-01.csv  options_synth.csv  spy_returns.csv
data/normalized/: spy_20230601.csv
data/samples/: spx_20240614_sample.csv
docs/: CODEX_SPRINT_TICKETS.md  DECISIONS.md  DOCS_AND_LOGGING_SYSTEM.md  Design.md  Greeks.md  NOW.md  PLAN_OF_RECORD.md  RUNBOOK.md  Results.md  TICKETS.md  Validation.md  ValidationHighlights.md  WORKLOG.md  WRDS_Results.md  history_cleanup_plan.md
docs/agent_runs/: README.md
docs/api/: doxygen-responsive.css  index.md
docs/artifacts/: README.md  heston_qe_vs_analytic.csv  manifest.json  mc_greeks_ci.csv  metrics_summary.json  metrics_summary.md  pde_convergence.csv  pde_order_slope.csv  (+7 more)
project_state/: ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CLAIMS_AND_EVIDENCE.md  CONFIG_REFERENCE.md  CURRENT_RESULTS.md  DATAFLOW.md  DEPENDENCY_GRAPH.md  EXPERIMENTS.md  FUNCTION_INDEX.md  INDEX.md  KNOWN_ISSUES.md  MODULE_SUMMARIES.md  NON_WRDS_DATA_REQUIREMENTS.md  OPEN_QUESTIONS.md  PIPELINE_FLOW.md  README.md  RESEARCH_NOTES.md  ROADMAP.md  RUNBOOK.md  SERVER_ENVIRONMENT.md  STATE_INDEX.md  STYLE_GUIDE.md  TEST_COVERAGE.md  VALIDATION_MATRIX.md  WRDS_DATA_REQUIREMENTS.md
python/: CMakeLists.txt  pybind_module.cpp
python/examples/: portfolio_risk.py  quickstart.py
python/scripts/: check_release_tag.py  cibw_smoke.py  cibw_test_suite.py  release_manifest.py  validate_sdist.py
scripts/: american_consistency.py  benchmark_portfolio_risk.py  build_wrds_cache.py  calibrate_heston.py  calibrate_heston_series.py  check_data_policy.py  cleanup_repo.sh  demo.sh  generate_bench_artifacts.py  generate_metrics_summary.py  generate_synthetic_data.py  generate_wrds_resume_snippet.py  gpt_bundle.py  greeks_reliability.py  greeks_variance.py  heston_calibration_repair_audit.py  heston_qe_vs_analytic.py  heston_reference_audit.py  heston_series_plot.py  manifest_utils.py  mc_greeks_ci.py  multiasset_figures.py  package_validation.py  parity_checks.py  pde_convergence.py  pde_order_slope.py  protocol_utils.py  ql_parity.py  qmc_vs_prng.py  qmc_vs_prng_equal_time.py  report.py  reproduce_all.sh  reproduce_wrds_local_metrics.sh  risk_backtest.py  sabr_slice_calibration.py  ssvi_development_benchmark.py  ssvi_five_date_panel.py  ssvi_holdout_preflight.py  ssvi_sealed_holdout.py  tri_engine_agreement.py  (+1 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1d.js  all_1e.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enums_1.js  (+95 more)
src/: american.cpp  asian.cpp  black_scholes.cpp  bs_barrier_rr.cpp  digital.cpp  grid_utils.cpp  heston.cpp  lookback.cpp  main.cpp  mc.cpp  mc_barrier.cpp  multi.cpp  pde.cpp  pde_barrier.cpp  portfolio.cpp  risk.cpp  version.cpp
tests/: test_american.cpp  test_artifacts_root_guard_fast.py  test_asian.cpp  test_barrier.cpp  test_barrier_mc_regression.cpp  test_black_scholes.cpp  test_cli_fast.py  test_data_policy_fast.py  test_digital.cpp  test_docs_sanity_fast.py  test_gpt_bundle_empty_diff_fast.py  test_greeks_reliability_fast.py  test_grid_utils.cpp  test_heston.cpp  test_heston_fast.py  test_heston_safety_fast.py  test_heston_series_fast.py  test_lookback.cpp  test_mc.cpp  test_metrics_snapshot_fast.py  test_multi.cpp  test_parity_fast.py  test_pde.cpp  test_portfolio.cpp  test_protocol_config_guard_fast.py  test_python_heston_analytic_batch_concurrency_fast.py  test_python_heston_analytic_batch_fast.py  test_python_heston_analytic_binding_fast.py  test_python_heston_analytic_put_batch_fast.py  test_python_heston_analytic_put_fast.py  test_python_heston_batch_ci_config_fast.py  test_python_heston_batch_docs_fast.py  test_python_heston_batch_parameter_broadcast_fast.py  test_python_heston_call_metrics_batch_fast.py  test_python_heston_call_metrics_grid_fast.py  test_python_heston_implied_vol_batch_fast.py  test_python_heston_symmetric_batch_broadcast_fast.py  test_python_portfolio_risk_fast.py  test_python_release_candidate_fast.py  test_python_release_manifest_fast.py  (+17 more)
tools/: project_state_generate.py
wrds_pipeline/: __init__.py  asof_checks.py  bs_utils.py  calibrate_bs.py  calibrate_heston.py  compare_bs_heston.py  dateset.yaml  delta_hedge_pnl.py  heston_reference.py  ingest_sppx_surface.py  oos_pricing.py  pipeline.py  ssvi_reference.py  ssvi_surface.py  vault_adapter.py
(+427 files in other folders)
