[build-system]
requires = ["scikit-build-core>=0.9.0", "pybind11>=2.11.1"]
build-backend = "scikit_build_core.build"

[project]
name = "pyquant-pricer"
version = "0.3.0"
description = "Python bindings for quant-pricer-cpp: Black–Scholes, MC, PDE, Heston"
readme = "README.md"
authors = [{ name = "Mateo Bodon" }]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.21",
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: C++",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MateoBodon/quant-pricer-cpp"
Issues = "https://github.com/MateoBodon/quant-pricer-cpp/issues"

[tool.scikit-build]
cmake.minimum-version = "3.16"
build-dir = "build-py"
wheel.packages = []
cmake.define = { QUANT_ENABLE_PYBIND = "ON", CMAKE_BUILD_TYPE = "Release" }
