[metadata]
name = pyquant-pricer
version = 0.3.1
description = Python bindings for quant-pricer-cpp
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Mateo Bodon
url = https://github.com/MateoBodon/quant-pricer-cpp
project_urls =
    Documentation = https://mateobodon.github.io/quant-pricer-cpp/
    Issues = https://github.com/MateoBodon/quant-pricer-cpp/issues

[options]
python_requires = >=3.8
zip_safe = False
